copy bi conflic j do, commit lai

--- a/DHCP-java-chat/src/client/FormMainClient.form
+++ b/DHCP-java-chat/src/client/FormMainClient.form
@@ -39,7 +39,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="jPanel1" max="32767" attributes="0"/>
           <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
-          <Component id="jScrollPane3" alignment="0" pref="320" max="32767" attributes="0"/>
+          <Component id="jScrollPane3" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -97,7 +97,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jTextField1" max="32767" attributes="0"/>
                       <Component id="lblUser" alignment="1" max="32767" attributes="0"/>
-                      <Component id="lblUser1" alignment="1" pref="200" max="32767" attributes="0"/>
+                      <Component id="lblUser1" alignment="1" max="32767" attributes="0"/>
                       <Component id="txtFullname" alignment="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -198,7 +198,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="txtAddFriend" max="32767" attributes="0"/>
+                  <Component id="txtAddFriend" min="-2" pref="229" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnAddFriend" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
